--- a/Requirements.txt
+++ b/Requirements.txt
@@ -2,3 +2,5 @@ streamlit==1.32.2
 selenium==4.15.2
 pandas==2.1.3
 webdriver-manager==4.0.1
+undetected-chromedriver==3.5.3
+chromedriver-autoinstaller==0.4.0
